[package]
authors = ["The Rust Project Developers"]
name = "std"
version = "0.0.0"
build = "build.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust.git"
description = "The Rust Standard Library"
edition = "2018"

[lib]
name = "std"
path = "lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
#alloc = { path = "../liballoc" }
#core = { path = "../libcore" }
#libc = { version = "0.2.59", default-features = false, features = ['rustc-dep-of-std'] }
#compiler_builtins = { version = "0.1.15" }
#profiler_builtins = { path = "../libprofiler_builtins", optional = true }
panic_unwind = { path = "../libpanic_unwind", optional = true }
panic_abort = { path = "../libpanic_abort" }
unwind = { path = "../libunwind" }
hashbrown = { version = "0.5.0", features = ['rustc-dep-of-std'] }

[dependencies.backtrace]
version = "0.3.32"
default-features = false # don't use coresymbolication on OSX
features = [
  "rustc-dep-of-std", # enable build support for integrating into libstd
  "dbghelp",          # backtrace/symbolize on MSVC
  "libbacktrace",     # symbolize on most platforms
  "libunwind",        # backtrace on most platforms
  "dladdr",           # symbolize on platforms w/o libbacktrace
]
optional = true

[dependencies.libc]
git = "https://github.com/rust-wii/libc.git"
branch = "wii"
default-features = false
features = ["rustc-dep-of-std"]

[dependencies.ogc-sys]
git = "https://github.com/rust-wii/ogc-rs.git"

[dev-dependencies]
rand = "0.6.5"

[build-dependencies]
cc = "1.0"

[features]
default = ["std_detect_file_io", "std_detect_dlsym_getauxval"]

#profiler = ["profiler_builtins"]
#compiler-builtins-c = ["alloc/compiler-builtins-c"]
panic-unwind = ["panic_unwind"]
llvm-libunwind = ["unwind/llvm-libunwind"]

# Make panics and failed asserts immediately abort without formatting any message
#panic_immediate_abort = ["core/panic_immediate_abort"]

# Enable std_detect default features for stdsimd:
# https://github.com/rust-lang-nursery/stdsimd/blob/master/crates/std_detect/Cargo.toml
std_detect_file_io = []
std_detect_dlsym_getauxval = []

[package.metadata.fortanix-sgx]
# Maximum possible number of threads when testing
threads = 125
